Source/WebCore/page/FrameView.h
@@ -491,9 +491,7 @@ private:
     virtual void didAddScrollbar(Scrollbar*, ScrollbarOrientation) OVERRIDE;
     virtual void willRemoveScrollbar(Scrollbar*, ScrollbarOrientation) OVERRIDE;
 
-    void scheduleResizeEvent();
-    void sendResizeEvent();
-    void delayedResizeEventTimerFired(Timer<FrameView>*);
+    void dispatchResizeEvent();
 
     void updateScrollableAreaSet();
 
